# ai-guardrails

./: .biomeignore  .cc-review.yaml  .coderabbit.yaml  .codespellrc  .coverage  .cursorrules  .deepsource.toml  .editorconfig  .gitignore  .guardrails-audit.jsonl  .guardrails-exceptions.toml  .guardrails-review.toml  .markdownlint-cli2.jsonc  .markdownlint.jsonc  .pr_agent.toml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .semgrepignore  .suppression-allowlist  .windsurfrules  .yamllint.yml  AGENTS.md  CLAUDE.md  README.md  action.yml  biome.json  biome.jsonc  communication.md  install.py  install.sh  lefthook.yml  memory.json  package.json  pyproject.toml  ruff.toml  test-review-payload.json  tsconfig.json
.ai-guardrails/: config.toml
.ai-guardrails/configs/: biome.json  ruff.toml
.ai-guardrails/hooks/: dangerous-command-check.sh  detect-config-ignore-edits.sh  detect-suppression-comments.sh  format-and-stage.sh  protect-generated-configs.sh  validate-generated-configs.sh
.claude/: CLAUDE.md  settings.json
.claude/agents/: code-quality-scanner.md  code-reuse-scanner.md  edge-case-scanner.md  efficiency-scanner.md  integration-bug-scanner.md  logic-bug-scanner.md  slop-researcher.md
.claude/analysis/: dual_source_design.md
.claude/commands/: bug-hunt.md  memory-load.md  memory-save.md  new-generator.md  new-language.md  new-step.md  review-pr.md  simplify-review.md
.claude/hooks/: hooks.json
.claude/rules/: git-workflow.md  python-source.md  test-conventions.md  typescript-source.md
.claude/specs/: project_specs.xml
.gemini/: config.yaml  styleguide.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: ai-guardrails.yml  cc-review-interactive.yml  cc-review.yml  check.yml  claude-bug-hunt.yml  claude-code-review.yml  claude-interactive.yml  claude-review.yml  claude-simplify.yml  claude-strict-review.yml  claude.yml  guardrails-review.yml  pr-agent.yml  release.yml  review-all.yml  test-post-review.yml  test.yml
PR-212/: meta.json  session.jsonl
configs/: .clang-tidy  .globalconfig  biome.json  languages.yaml  ruff.toml
docs/: ADR-002-greenfield-architecture.md  REVIEW_BOT_FALSE_POSITIVES.md  project-review-2026-02.md  pyinfra-installer.md
docs/bugs/: baseline-fingerprint-gap.md  fresh-install-bugs.md  hook-bypass-regex-limitations.md
docs/features/: SPEC-v1.md  interactive-init.md
docs/plans/: bin-scripts-conversion.md  polish-and-cleanup.md  production-release-roadmap.md  replace-coderabbit-with-pr-agent.md  v3.1-design.md  v3.1-state.md
docs/specs/: SPEC-000-overview.md  SPEC-001-architecture.md  SPEC-002-config-system.md  SPEC-003-linter-system.md  SPEC-004-commands.md  SPEC-005-hooks.md  SPEC-006-defaults.md  SPEC-007-implementation-guide.md  SPEC-008-per-language-tools.md  SPEC-009-interactive-init.md  SPEC-010-fresh-repo-guard.md  SPEC-011-ci-direct-tools.md  SPEC-012-hook-binary-resolution.md  SPEC-013-version-pinning.md  project_specs.xml  pyinfra_installer_specs.xml  review-checklist.md
ideas/: enterprise-assessment.md  plan-status-command.md
lib/hooks/: common.sh  dangerous-command-check.sh  detect-config-ignore-edits.sh  detect-suppression-comments.sh  format-and-stage.sh  guardrails-patterns.sh  pre-commit.sh  pre-push.sh  protect-generated-configs.sh  validate-generated-configs.sh
lib/installers/: __init__.py  _utils.py  core.py  cpp.py  cpp.sh  detect_pm.sh  go.py  go.sh  lua.py  lua.sh  node.py  node.sh  python.py  python.sh  rust.py  rust.sh  shell.py  shell.sh
lib/python/: __init__.py  assemble_precommit.py  coderabbit_parser.py  generate_configs.py  registry.py
scripts/: install.sh
src/: cli.ts
src/ai_guardrails/: __init__.py  __main__.py  cli.py  constants.py
src/check/: builder-cmd.ts  builder-path.ts  engine-helpers.ts  engine.ts  flag-aliases.ts  output.ts  ruleset.ts  types.ts
src/commands/: allow.ts  check.ts  completion.ts  context.ts  generate.ts  hook.ts  init.ts  install.ts  query.ts  report.ts  snapshot.ts  status.ts
src/config/: loader.ts  schema.ts
src/generators/: agent-rules.ts  biome.ts  claude-settings.ts  codespell.ts  editorconfig.ts  lefthook.ts  markdownlint.ts  registry.ts  ruff.ts  staticcheck.ts  types.ts
src/hooks/: allow-comment.ts  dangerous-cmd.ts  dangerous-patterns.ts  format-stage.ts  protect-configs.ts  protect-reads.ts  runner.ts  suppress-comments.ts  types.ts
src/infra/: command-runner.ts  console.ts  file-manager.ts
src/init/: prompt.ts  registry.ts  runner.ts  selections.ts  types.ts  wizard.ts
src/languages/: constants.ts  cpp.ts  dotnet.ts  go.ts  lua.ts  python.ts  registry.ts  rust.ts  shell.ts  types.ts  typescript.ts  universal.ts
src/models/: audit-record.ts  baseline.ts  lint-issue.ts  paths.ts  step-result.ts
src/pipelines/: check.ts  generate.ts  init.ts  install.ts  types.ts
src/runners/: biome.ts  clang-tidy.ts  clippy.ts  codespell.ts  dotnet-build.ts  golangci-lint.ts  markdownlint.ts  pyright.ts  ruff.ts  selene.ts  shellcheck.ts  shfmt.ts  tsc.ts  types.ts
src/steps/: check-prerequisites.ts  check-step.ts  detect-languages.ts  filter-allow-comments.ts  generate-configs.ts  install-hooks.ts  install-prerequisites.ts  load-config.ts  (+8 more)
templates/: .coderabbit.yaml  .deepsource.toml  .pr_agent.toml  CLAUDE.md.guardrails  guardrails-exceptions.toml  pre-commit-config.yaml  settings.json.strict
tests/: __init__.py  conftest.py  feature-runner.test.ts  test_assemble.py  test_assemble_precommit.py  test_cli.py  test_coderabbit.py  test_coderabbit_parser.py  test_coderabbit_review.py  test_comments.py  test_comments_cli.py  test_coverage_enforcement.py  test_detection.py  test_generate.py  test_generators.py  test_hook_config_ignore.py  test_hook_dangerous_cmd.py  test_hook_format_stage.py  test_hook_protect_configs.py  test_hook_suppress_comments.py  test_hooks_utils.py  test_init.py  test_init_integration.py  test_install_integration.sh  test_installers.py  test_paths.py  test_readme_grammar.py  test_registry.py  test_resolve_enforcement.py  test_resolve_validation.py  test_status.py  test_template_sync.py
(+623 files in other folders)
