[project]
name = "ai-guardrails"
version = "2.0.0"
description = "Pedantic code enforcement for AI-maintained repositories"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Questi0nM4rk" }]
readme = "README.md"

dependencies = [
  "cyclopts>=4.6.0",
  "pyyaml>=6.0",
  "tomli-w>=1.0",
  "tomlkit>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.0", "pyright>=1.1.408"]

[project.scripts]
ai-guardrails = "ai_guardrails.cli:app"
ai-guardrails-dangerous-cmd = "ai_guardrails.hooks.dangerous_cmd:main"
ai-guardrails-protect-configs = "ai_guardrails.hooks.protect_configs:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_guardrails"]
[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
include = [
  "src/**/*.py",
  "src/**/*.typed",
  "src/ai_guardrails/_data/**",
  "tests/**/*.py",
  "pyproject.toml",
  "README.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/ai_guardrails"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]
fail_under = 85

[tool.pyright]
include = ["src/ai_guardrails"]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[tool.codespell]
ignore-words-list = "brin,crate"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
type-check = ["pyright>=1.1.408"]
